Fix Sonar issues and SQL injection risk in clinical events mapper
- Replace deprecated @MockBean with @MockitoBean in ColumnStoreClinicalEventControllerTest
- Replace Stream.collect(Collectors.toList()) with Stream.toList() in ClickhouseClinicalEventMapperTest
- Replace MyBatis string substitution (${sortBy}/${direction}) with safe <choose>/<when>
  mappings over known ClinicalEventSortBy enum values to eliminate SQL injection vector
- Add deterministic ce.clinical_event_id tie-breaker to inner sort fragment to ensure
  stable pagination when multiple events share the same primary sort key

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>